# slog

./: DOCKERFILE  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  useful_commands
ships_log/: main.py  manage.py
ships_log/ships_log/: api.py  asgi.py  settings.py  urls.py  wsgi.py
slog/apps/: api.py
slog/slog/: asgi.py  settings.py  urls.py  wsgi.py
